openAPI spec for files
